# Changelog

## Next Release
* ADD Added feed icons for disqus and tamat.
* CHG Centralized all configuration to app.ini. All other conf files was 
      removed.
* ADD Lifestream personalization, edit the about section in app.ini conf.
* FIX StreamModel::getActivityStats() was not always returning the latest date
* ADD Comments on entries via Disqus
* ADD Entry title is now visible in the html page title

## 0.9.1.1
* FIX All tags was not added correctly per entry
* CHG Renamed addStreamToTags to addTagsToStream in TaggedStreams.

## 0.9.1
* ADD Aggregation of tags from feeds and tagged streams
* ADD Updated db schema. Run db/migrations/1.0.2/up.sql
* ADD Db table realations, including cascading deletes
* ADD ActivityStats helper
* CHG Renamed graphs action services to index 
* CHG Extended Ls_Aggregator_Entry to hold list of categories
* CHG Extended StreamModel::add to take tags key in data array
* CHG ServiceModel::destroy is not direct coupled to StreamModel anymore
* CHG Removed ServiceModel::destroyOptions
* CHG Removed StreamModel::destroyByService

## 0.9.0
* Initial release