@@ -21,6 +21,12 @@ db.params.password = @db.params.password@
 db.params.dbname   = @db.params.dbname@
 
 ;
+; Enable profiler. Will display page execution time and query statistics in a 
+; html comment block at the end of the rendered page. 
+;
+profiler.enabled = @profiler.enabled@
+
+;
 ; Disqus Comment integration
 ; Register disqus account at <http://disqus.com>
 ;
@@ -71,6 +77,11 @@ db.params.host     = localhost
 db.params.username = root
 db.params.password = password
 db.params.dbname   = lifestream
+
+;
+; Enable profiler the profiler.
+;
+profiler.enabled = false
 
 ;
 ; Disable auth in dev env.
